# agnescafe

./: LICENSE  README.md  example.env  pyproject.toml
src/agnescafe/: manage.py
src/agnescafe/core/: asgi.py  settings.py  urls.py  wsgi.py
