[project]
name = "agnescafe"
version = "0.1.0"
description = "Sistema simples para gestão de cafeteria"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django-environ>=0.12.0",
    "django-model-utils>=5.0.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pylint-django>=2.6.1",
]

[project.scripts]
django = "agnescafe.manage:main"

[tool.uv]
package = true
